public interface IWeatherApiClient
{
    string GetWeatherData();
}
