public interface IWeatherDisplay
{
    void Show(string weatherData);
}
