public interface IWeatherParser
{
    string Parse(string rawData);
}
