public interface IWeatherRepository
{
    void Save(string weatherData);
}
